--- a/debian/control
+++ b/debian/control
@@ -9,7 +9,7 @@ Vcs-Browser: https://github.com/scibian/collectd-sdiag-plugin
 Vcs-Git: https://github.com/scibian/collectd-sdiag-plugin.git
 
 Package: collectd-sdiag-plugin
-Architecture: any
+Architecture: all
 Depends:
  ${shlibs:Depends},
  ${misc:Depends},
