--- a/debian/control
+++ b/debian/control
@@ -5,6 +5,8 @@ Section: admin
 Build-Depends:
  debhelper (>= 9),
  dh-python,
+ python-all,
+ python-setuptools,
  python3-all,
  python3-setuptools,
 Standards-Version: 3.9.6
