--- a/debian/control
+++ b/debian/control
@@ -2,9 +2,12 @@ Source: collectd-sdiag-plugin
 Priority: extra
 Maintainer: Scibian Project <packaging@scibian.org>
 Section: admin
+X-Python3-Version: >= 3.5
 Build-Depends:
  debhelper (>= 9),
  dh-python,
+ python-all,
+ python2-setuptools,
  python3-all,
  python3-setuptools,
 Standards-Version: 3.9.6
