Fixed python build dependencies

--- a/debian/control
+++ b/debian/control
@@ -7,7 +7,7 @@ Build-Depends:
  debhelper (>= 9),
  dh-python,
  python-all,
- python2-setuptools,
+ python-setuptools,
  python3-all,
  python3-setuptools,
 Standards-Version: 3.9.6
