More build dep fixes

--- a/debian/control
+++ b/debian/control
@@ -5,11 +5,10 @@ Section: admin
 X-Python3-Version: >= 3.5
 Build-Depends:
  debhelper (>= 9),
- dh-python,
- python-all,
- python-setuptools,
+ python3-dev,
  python3-all,
  python3-setuptools,
+ cython3,
 Standards-Version: 3.9.6
 Vcs-Browser: https://github.com/scibian/collectd-sdiag-plugin
 Vcs-Git: https://github.com/scibian/collectd-sdiag-plugin.git
